--- a/kubernetes/nginx-deployment.yaml
+++ b/kubernetes/nginx-deployment.yaml
@@ -1,34 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: picalc-deploy
+  name: nginx-deploy
   labels:
-    app: picalc
+    app: nginx
 spec:
   selector:
     matchLabels:
-      app: picalc
+      app: nginx
   template:
     metadata:
       labels:
-        app: picalc
+        app: nginx
     spec:
       containers:
-      - name: picalc
+      - name: nginx
         image: __IMAGE__@__DIGEST__
         ports:
         - name: http-server
-          containerPort: 8080
+          containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: picalc-service
+  name: nginx-service
   labels:
-    app: picalc
+    app: nginx
 spec:
   ports:
-  - port: 8080
+  - port: 80
     targetPort: http-server
   selector:
-    app: picalc
+    app: nginx
