--- a/tekton/nginx-pipeline-pvc.yaml
+++ b/tekton/nginx-pipeline-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: picalc-source-pvc
+  name: nginx-source-pvc
 spec:
   accessModes:
     - ReadWriteOnce
